apps/base/cockpit/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit-service
subsets:
  - addresses:
      - ip: "192.168.0.2"
    ports:
      - port: 9090
