apps/base/cockpit/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit
  namespace: cockpit
subsets:
- addresses:
  - ip: 10.42.0.97
  ports:
  - port: 5678
    protocol: TCP
