apps/base/cockpit/endpointslice.yaml
# ---
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:  
#   name: cockpit-endpointslice
#   namespace: cockpit
#   labels:
#     kubernetes.io/service-name: cockpit-service
# addressType: IPv4
# ports:
#   - name: cockpit
#     protocol: TCP
#     port: 9090
# endpoints:
#   - addresses:
#       - "192.168.0.2"
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit-service
  namespace: cockpit
subsets:
  - addresses:
      - ip: 192.168.0.2
    ports:
      - name: cockpit
        port: 9090
        protocol: TCP
