apps/base/cockpit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cockpit-service
  namespace: cockpit
spec:
  ports:
    - name: cockpit
      protocol: TCP
      port: 80
      targetPort: 9090
