apps/base/cockpit/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit-ingress
  namespace: cockpit
  annotations:
    traefik.ingress.kubernetes.io/service.scheme: https
    traefik.ingress.kubernetes.io/service.insecureSkipVerify: "true"
spec:
  rules:
    - host: cockpit.nairvarun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockpit-service
                port:
                  name: cockpit
